# raytracing

./: CMakeLists.txt  README.md
include/: color.h  ray.h  vec3.h
src/: main.cc
